Lot if stuff, added more example in Class Cast